fixed some styles/alignments.

--- a/src/_styles/_about.scss
+++ b/src/_styles/_about.scss
@@ -4,7 +4,7 @@
 .jna-page--about {
   background: url(_assets/about/background.jpg) no-repeat bottom center;
   background-size: cover;
-  padding-top: 5rem;
+  padding-top: 18rem;
   color: $theme-global-primary;
 }
 
@@ -78,8 +78,6 @@
   }
 
   .jna-component--about {
-    padding-top: 18rem;
-
     .jna-component--heading {
       margin: 0 0 3rem 0;
       font-family: $theme-font-decorative;
