--- a/src/_styles/_projects.scss
+++ b/src/_styles/_projects.scss
@@ -18,12 +18,13 @@
   width: 100%;
   transition: $theme-global-transition;
   position: relative;
+  transform: scale(.95);
 
   &:hover,
   &:active,
   &:focus {
-    transform: scale(1.2);
-    box-shadow: 0 0 10px $theme-global-primary;
+    transform: scale(1);
+    box-shadow: 0 0 70px $theme-global-primary;
     z-index: 9999;
     background: $theme-global-primary;
 
@@ -82,20 +83,24 @@
   padding: 0;
 
   li {
-    padding: 5px;
+    padding: 0;
+    margin: 0;
   }
 }
 
 .jna-component--projects-thumbnail {
   width: 100%;
-  height: 100px;
+  height: 180px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: block;
 }
 
 
 @media (max-width: $screen-md-min) {
   .jna-component--projects {
-    padding: 0 40px;
+    padding: 0 20px;
   }
 }
 
